--- a/LL3/styles.css
+++ b/LL3/styles.css
@@ -105,7 +105,7 @@ header {
 /* Education
 -----------------------*/
 .education {
-    background-image: url(../images/annie-spratt-unsplash.jpg);
+    background-image: url(images/annie-spratt-unsplash.jpg);
     background-size: cover;
     background-position: left;
     padding: 100px; 
