--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -5,76 +5,173 @@
 #3A6EA5 : QUEEN BLUE
 #004E98 : YALE BLUE
 */
-html {
-    box-sizing: border-box;
+/* Global Styles
+-----------------------*/
+body {
+  color: #343434;
+  margin: 0;
+  padding: 0;
+  font-family: "Quicksand", sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+}
+img {
+  width: 300px;
+}
+h1,
+h2 {
+  font-family: "Press Start 2P", serif;
+}
+a {
+  color: #ffe66d;
+}
+a:hover {
+  text-decoration: none;
 }
 
-*, *:before, *:after {
-    box-sizing: inherit;
+h2 {
+  margin: 0;
 }
-body {
-    margin: 0;
-    padding: 0;
+
+h3 {
+  margin-bottom: 0;
 }
-header {
-    background: #437C90;
-    color: #F7FFF7;
-    margin: 0;
-    padding: 0;
+
+.content-wrap {
+  max-width: 800px;
+  width: 85%;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+.item-details h3 + p {
+  font-style: italic;
+}
+
+.item-details h3 ~ p {
+  margin: 0;
+}
+
+.divider > section {
+  border-bottom: 1px dashed darkgray;
+  padding: 25px 0px;
+}
+
+.divider > section:last-of-type {
+  border-bottom: none;
 }
 
 img {
-    width:375px;
+  width: 375px;
 }
 .projects a {
-    display: inline-block;
-    background: #EBEBEB;
-    border-radius: 4px;
-    padding: 3px;
-    margin: 0;
-    color: white;
+  display: inline-block;
+  background: #ebebeb;
+  border-radius: 4px;
+  padding: 3px;
+  margin: 0;
+  color: white;
 }
 
 .projects {
-    background: #3A6EA5;
+  background: #3a6ea5;
 }
-.projects .btn{
-    color:#DC0037;
-    background: #FF6700;
-    text-decoration: none;
-    padding: 4px;
-    border-radius: 4px;
-    display: inline-block;
-    font-size: 24px;
-    font-style: italic;
-    font-weight: bolder;
+.projects .btn {
+  color: #dc0037;
+  background: #ff6700;
+  text-decoration: none;
+  padding: 4px;
+  border-radius: 4px;
+  display: inline-block;
+  font-size: 24px;
+  font-style: italic;
+  font-weight: bolder;
 }
 .projects .btn:hover {
-    background: rgba(0,78,152, 95%);
-    color: white;
+  background: rgba(0, 78, 152, 95%);
+  color: white;
 }
 
 .project-item {
-    overflow: hidden;
-    padding: 15px;
+  overflow: hidden;
+  padding: 15px;
 }
-
 
 .content-wrap {
-    max-width:800px;
-    width:85%;
-    margin: 0 auto;
-    padding: 60px 0;
+  max-width: 800px;
+  width: 85%;
+  margin: 0 auto;
+  padding: 60px 0;
 }
 
-@media screen and (min-width:750px){
-    header {
-        text-align: center;
-    }
-    .project-item img {
-        float: left;
-        margin-right: 20px;
-    }
+/* work expirience
+-----------------------*/
+.work-exp {
+  background: #a1c6d7;
+}
 
-    .project-item
+/* Education
+-----------------------*/
+.education {
+  background-image: url(../images/annie-spratt-unsplash.jpg);
+  background-size: cover;
+  background-position: left;
+  padding: 100px;
+}
+.education p {
+  width: 60%;
+}
+
+/* contact info
+------------------------*/
+footer {
+  background: #343434;
+  color: #f7fff7;
+}
+.contact-list {
+  list-style-type: none;
+  padding: 0;
+}
+.contact-list a {
+  padding: 15px;
+  display: inline-block;
+}
+
+/* Responsive
+------------------------*/
+@media screen and (min-width: 750px) {
+  header,
+  footer {
+    text-align: center;
+  }
+  .project-item img {
+    float: left;
+    margin-right: 20px;
+  }
+  .job-item {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+  }
+  .contact-list {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 749px) {
+  h1 {
+    font-size: 75px;
+  }
+  h2 {
+    line-height: 1;
+  }
+
+  h1 {
+    line-height: 1.1;
+    font-size: 50px;
+    margin-bottom: 20px;
+  }
+  .contact-list a {
+    padding: 5px;
+  }
 }
